# Financier

./: .dockerignore  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: CI.yml  blank.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
environments/: .env.example
migrations/: env.py
migrations/versions/: 2023_11_29_1448-380057dacc17_user_table.py  2023_12_05_1713-3f859bcde5e6_add_media_table.py
src/: celery.py  celery_init.py  config.py  exceptions.py  main.py  schemas.py  utils.py
src/auth/: auth.py  models.py  router.py  schemas.py  utils.py
src/database/: core.py  models.py
src/media/: config.py  constants.py  models.py  router.py  schemas.py  service.py  tasks.py  utils.py
src/s3/: client.py  config.py  service.py  utils.py
tests/: conftest.py  test_testing.py
tests/auth/: conftest.py  factories.py  test_login.py  test_logout.py  test_registration.py
