[tool.poetry]
name = "financier"
version = "0.1.0"
description = "Application for finacial control."
authors = ["AndrewRayst <mr.darmelow@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
