[tool.poetry]
name = "financier"
version = "0.1.0"
description = "Application for finacial control."
authors = ["AndrewRayst <mr.darmelow@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
gunicorn = "^21.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.12.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
redis = "^5.0.1"
types-redis = "^4.6.0.11"
argon2-cffi = "^23.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
flake8 = "^6.1.0"
flake8-bugbear = "^23.11.26"
pep8-naming = "^0.13.3"
flake8-variables-names = "^0.0.6"
isort = "^5.12.0"
black = "^23.11.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
async-factory-boy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode = "auto"